[gd_scene load_steps=10 format=1]

[ext_resource path="res://gfx/gui/button.png" type="Texture" id=1]
[ext_resource path="res://gfx/gui/button-pressed.png" type="Texture" id=2]
[ext_resource path="res://script/Button.gd" type="Script" id=3]
[ext_resource path="res://font/sigmar-one/SigmarOne.ttf" type="DynamicFontData" id=4]

[sub_resource type="Animation" id=1]

length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Label:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Color( 1, 0.647059, 0, 1 ) ]
}

[sub_resource type="Animation" id=2]

length = 2.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Label:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": FloatArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.647059, 0, 1 ), Color( 0.67451, 1, 0, 1 ), Color( 0, 1, 0, 1 ), Color( 0.67451, 1, 0, 1 ), Color( 1, 0.647059, 0, 1 ) ]
}

[sub_resource type="Animation" id=3]

length = 2.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Label:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": FloatArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 0, 1 ), Color( 0.67451, 1, 0, 1 ), Color( 0, 1, 0, 1 ), Color( 0.67451, 1, 0, 1 ), Color( 1, 1, 0, 1 ) ]
}

[sub_resource type="Animation" id=4]

length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Label:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 0, 1 ) ]
}

[sub_resource type="DynamicFont" id=5]

font/size = 40
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 4 )

[node name="SubmitButton" type="TextureButton"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -30.0
margin/top = 160.0
margin/right = 410.0
margin/bottom = 250.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 1 )
textures/pressed = ExtResource( 2 )
params/resize_mode = 1
params/stretch_mode = 0
script/script = ExtResource( 3 )
Flashing = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Default = SubResource( 1 )
anims/Flashing = SubResource( 2 )
anims/FlashingHover = SubResource( 3 )
anims/Hover = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 20.0
margin/top = 10.0
margin/right = 420.0
margin/bottom = 76.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 0.647059, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "Submit"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="button_down" from="." to="." method="_on_SubmitButton_button_down"]

[connection signal="button_up" from="." to="." method="_on_SubmitButton_button_up"]

[connection signal="mouse_enter" from="." to="." method="_on_SubmitButton_mouse_enter"]

[connection signal="mouse_exit" from="." to="." method="_on_SubmitButton_mouse_exit"]


